Fix Bootstrap 4 error with SCSS.  changed image for carousel to be smaller on mobile

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -28,9 +28,11 @@ html, body {
 p, {
   color: $light;
 }
-ul{
+
+ul {
   color: $white;
 }
+
 .no-bullets {
   list-style-type: none;
 }
@@ -84,19 +86,32 @@ hr {
 
 }
 
-.carousel-buttons{
+.carousel-buttons {
   padding: .5rem !important;
 }
+
+//.carousel-item img{
+//  display: flex;
+//  justify-content: center;
+//  align-items: center;
+//}
+//
+//.carousel-item img {
+//  max-width: 100%;
+//  height: auto;
+//}
+
 
 .btn-outline-orange:hover {
   background-color: $orange;
   color: white;
 }
 
-.btn-outline-youtube{
+.btn-outline-youtube {
   color: $youtube;
   border-color: $youtube;
 }
+
 .btn-outline-youtube:hover {
   background-color: $youtube;
   color: white;
@@ -111,6 +126,7 @@ hr {
   background-color: $itch;
   color: white;
 }
+
 .btn-outline-itch:hover i {
   color: white;
 }
@@ -282,14 +298,17 @@ figure {
   margin-right: 5%;
 }
 
-.project-entry-zone-skills ul{
+.project-entry-zone-skills ul {
   text-align: left;
   align-content: center;
-}.project-entry-zone-skills li{
+}
+
+.project-entry-zone-skills li {
   padding-top: .15rem;
   padding-bottom: .15rem;
 }
-.project-entry-zone-skills h3{
+
+.project-entry-zone-skills h3 {
   margin-bottom: .1rem;
   margin-top: 1rem;
 }
@@ -568,13 +587,21 @@ figure {
   }
 
 
-  .carousel-inner img {
+  //.carousel-inner img {
+  //  width: 100%;
+  //  height: auto;
+  //  //object-fit: cover;
+  //  //object-position: 100% 0;
+  //}
+
+    .carousel-inner img {
     width: 100%;
     height: auto;
-    //object-fit: cover;
+    max-height: 600px;
+
+    object-fit: cover;
     //object-position: 100% 0;
   }
-
   .carousel-caption {
     position: absolute;
     top: 50%;
